# monoinjector

./: CMakeLists.txt  README.md
src/: HModule.hpp  Handle.cpp  Handle.hpp  VirtualMemory.hpp  main.cpp
src/injector/: Assembly.hpp  Injector.hpp  Types.hpp
